Se agregó footer

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
         </div>
       </div>
       <button>Set Alarm</button>
+      <footer>
+        <p>Author: Gaby Ugarte<br>
+      </footer>
     </div>
 
     <script src="script.js"></script>
 
   </body>
+  
 </html>
